--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-target/*
+*.log
+/resources/public/js/compiled/**
+/resources/public/js/testable.js
+figwheel_server.log
+pom.xml
+*.jar
+/lib/
+/classes/
+/out/
+/target/
+.lein-deps-sum
+.lein-repl-history
+.lein-plugins/
+.repl
+.nrepl-port
+.idea/
+*.iml
+.lein-failures
+.rebel_readline_history
+yarn.lock
+/resources/public/node_modules
+/resources/public/js
